# amazon_price_competitor

./: README.md  data.json  main.py  pyproject.toml
src/: db.py  oxylabs_client.py  services.py
