[project]
name = "amazon-price-competitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "openai>=2.3.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
    "tinydb>=4.8.2",
]
